
2000-12-14  Ales Hvezda  <ahvezda@geda.seul.org>

	* examples/vams/gschemrc: Added one line suggested by Stefan to get
	  the keymapping stuff working 100% with keymap redefinition.

2000-12-13  Ales Hvezda  <ahvezda@geda.seul.org>

	* configure.in: Added -lregex for CYGWIN32 build

2000-12-12  Ales Hvezda  <ahvezda@geda.seul.org>

	* scheme/gnet-vams.scm: Finally found the time to finish getting this
	  backend working with guile 1.4 (using the fixes Eduard provided)

2000-12-07  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/s_project.c: Removed obsolete DONT_REDRAW var from code

2000-12-03  Ales Hvezda  <ahvezda@geda.seul.org>

	* configure.in: Slightly rearranged things to make cygwin port happy

2000-12-02  Ales Hvezda  <ahvezda@geda.seul.org>

        * src/gnetlist.c: Changed Cygwin warning message

	* src/g_rc.c: Updated an #if to work with the current cygwin

2000-11-30  Ales Hvezda  <ahvezda@geda.seul.org>

        * configure.in: Added -fnative-struct flag for CYGWIN port only

        * configure.in: Added --enable-debug flag to enable -g flag

2000-11-16  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/s_traverse.c: Move s_traverse_nethash_build to libgeda

	* src/s_traverse.c: Renamed all o_nethash functions to s_nethash
	  (in accordance to the changes made in libgeda)

2000-11-12  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/*.c: Fixed the misspelling of separator (pointed out by Stefan)

2000-11-04  Ales Hvezda  <ahvezda@geda.seul.org>

	* scheme/gnet-vhdl.scm: Renamed this file to gnet-vhdlold.scm

	* scheme/gnet-vhdl.scm: Put this file back as gnet-vhdl.scm (undid
	  above)

	* docs/: Created documentation directory and moved all README.* 
	  files into this directory

	* docs/vams: Created directory, added vams documentation

	* examples/vams/: Created directory, moved the example vams design
	  into this directory (written by Eduard Moser and Martin Lehmann)

	* scheme/gnet-vams.scm: Added scheme backend code (update Makefile.am)