@@ -82,6 +82,10 @@ vams_get_package_attributes(SCM scm_uref)
 	char *uref;
 	char *return_value=NULL;
 
+	SCM_ASSERT(SCM_NIMP (scm_uref) && 
+		   (SCM_STRINGP (scm_uref) || SCM_CONSP(scm_uref)),
+		   scm_uref , SCM_ARG1, "gnetlist:vams-get-package-attributes");
+
         uref = gh_scm2newstr(scm_uref, NULL);
 
 	/* here is where you make it multi page aware */
